rubocop item and fix a typo on a field name

--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -8,7 +8,7 @@
 
   .required.field
     = f.label :uri
-    = f.uri_field :uri, aria: { describedby: "Bookmark URL" }, value: bookmark.uri.to_s
+    = f.url_field :uri, aria: { describedby: "Bookmark URL" }, value: bookmark.uri.to_s
 
   .required.field
     = f.label :title
