update views to make for a bit more of an easier/friendlier extension of profile

--- a/app/views/oauth/applications/edit.html.haml
+++ b/app/views/oauth/applications/edit.html.haml
@@ -1,6 +1,8 @@
 - content_for :page_title do
   Editing "#{ @application.name }"
 
-%h1 Editing "#{ @application.name }"
+= render partial: "profiles/tabs"
+
+%h2.ui.dividing.header Editing "#{ @application.name }"
 
 = render partial: "form", locals: { application: @application }
