--- a/app/views/oauth/applications/index.html.haml
+++ b/app/views/oauth/applications/index.html.haml
@@ -1,7 +1,9 @@
 - content_for :page_title do
   Developer - OAuth2 Apps
 
-%h1 Developer OAuth2 Apps
+= render partial: "profiles/tabs"
+
+%h2.ui.dividing.header Developer OAuth2 Apps
 
 .ui.menu
   .ui.item
