--- a/app/views/oauth/authorizations/show.html.haml
+++ b/app/views/oauth/authorizations/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :page_title do
-  = t(".title")
+  Authorization code
 
-%h1= t(".title")
+%h1 Authorization code
 %code#authorization_code= params[:code]
