--- a/app/views/oauth/applications/show.html.haml
+++ b/app/views/oauth/applications/show.html.haml
@@ -7,7 +7,7 @@
 
 .ui.fluid.text.menu
   .ui.item
-    = link_to t('doorkeeper.applications.buttons.edit'), edit_oauth_application_path(@application)
+    = link_to "Edit", edit_oauth_application_path(@application)
 
   .right.menu
     .item{ data: { behavior: "modal", template: "public/templates/oauth/applications/delete", url: oauth_application_path(@application), model: JSON.parse(@application.to_json) } }
