--- a/app/views/oauth/authorizations/new.html.haml
+++ b/app/views/oauth/authorizations/new.html.haml
@@ -4,30 +4,36 @@
 .ui.grid
   .row
     .centered.six.wide.column
-      %h2.ui.header= t(".title")
+      %h2.ui.header Authorization required
 
-      = raw t('.prompt', client_name: content_tag(:strong, class: 'text-info') { @pre_auth.client.name })
+      %p
+        Authorize this application
+        %code= @pre_auth.client.name
+        to access your data?
 
       - if @pre_auth.scopes.count > 0
-        %p= t('.able_to')
+        %p This application will be able to:
 
         %ul.ui.list
           - @pre_auth.scopes.each do |scope|
-            %li.item= t scope, scope: [:doorkeeper, :scopes]
+            %li.item= scope
 
-      .actions
-        = form_tag oauth_authorization_path, method: :post do
-          = hidden_field_tag :client_id, @pre_auth.client.uid
-          = hidden_field_tag :redirect_uri, @pre_auth.redirect_uri
-          = hidden_field_tag :state, @pre_auth.state
-          = hidden_field_tag :response_type, @pre_auth.response_type
-          = hidden_field_tag :scope, @pre_auth.scope
-          = submit_tag t('doorkeeper.authorizations.buttons.authorize'), class: "ui fluid green button"
+      .ui.grid
+        .equal.width.row
+          .column
+            = form_tag oauth_authorization_path, method: :post do
+              = hidden_field_tag :client_id, @pre_auth.client.uid
+              = hidden_field_tag :redirect_uri, @pre_auth.redirect_uri
+              = hidden_field_tag :state, @pre_auth.state
+              = hidden_field_tag :response_type, @pre_auth.response_type
+              = hidden_field_tag :scope, @pre_auth.scope
+              = submit_tag "Authorize", class: "ui huge positive button"
 
-        = form_tag oauth_authorization_path, method: :delete do
-          = hidden_field_tag :client_id, @pre_auth.client.uid
-          = hidden_field_tag :redirect_uri, @pre_auth.redirect_uri
-          = hidden_field_tag :state, @pre_auth.state
-          = hidden_field_tag :response_type, @pre_auth.response_type
-          = hidden_field_tag :scope, @pre_auth.scope
-          = submit_tag t('doorkeeper.authorizations.buttons.deny'), class: "ui fluid negative button"
+          .column
+            = form_tag oauth_authorization_path, method: :delete do
+              = hidden_field_tag :client_id, @pre_auth.client.uid
+              = hidden_field_tag :redirect_uri, @pre_auth.redirect_uri
+              = hidden_field_tag :state, @pre_auth.state
+              = hidden_field_tag :response_type, @pre_auth.response_type
+              = hidden_field_tag :scope, @pre_auth.scope
+              = submit_tag "Deny", class: "ui huge negative button"
