--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -13,31 +13,4 @@
  *= require_tree ./admin
  *= require_self
  */
-@import "semantic-ui";
-
-@import url("//fonts.googleapis.com/css?family=Maven+Pro:700,900");
-
-.header {
-  font-family: "Maven Pro", $font-family;
-}
-
-.main.grid {
-  margin-top: 5em;
-}
-
-.item.padder {
-  margin-top: 2em;
-}
-
-.ui.menu .item img.logo {
-  margin-right: 1.5em;
-}
-
-.ui.footer.segment {
-  margin: 5em 0em 0em;
-  padding: 5em 0em;
-}
-
-.ui.menu > .item.hidden {
-  display: none;
-}
+@import "common";
