--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,42 +13,4 @@
  *= require_tree ./public
  *= require_self
  */
-@import "semantic-ui";
-
-// TODO: Replace with a local font
-@import url("//fonts.googleapis.com/css?family=Maven+Pro:700,900");
-
-html, body{
-  height: 100%;
-}
-
-.header {
-  font-family: "Maven Pro", $font-family;
-}
-
-.ui.pusher {
-  min-height: 100%;
-}
-
-.main.container {
-  margin-top: 5em;
-}
-
-.item.padder {
-  margin-top: 2em;
-}
-
-.ui.menu .item img.logo {
-  margin-right: 1.5em;
-}
-
-.ui.footer.segment {
-  margin: 5em 0em 0em;
-  padding: 5em 0em;
-}
-
-.ui.menu {
-  & > .item.hidden, & > .item.right.hidden {
-    display: none;
-  }
-}
+@import "common";
