break js up into a better common pattern and make an es2015 class for the root app
also provides basic ability to register 'initializers' that run on every turbolinks page load
using es2015 classes again

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,4 @@
 
     = render partial: "layouts/footer"
 
-  = javascript_include_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+  = javascript_include_tag "public", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
