--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -9,4 +9,4 @@
 
 = csrf_meta_tags
 
-= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload"
+= stylesheet_link_tag "public", media: "all", "data-turbolinks-track": "reload"
