--- a/app/views/layouts/_body.html.haml
+++ b/app/views/layouts/_body.html.haml
@@ -1,5 +1,8 @@
 = render partial: "layouts/navbar"
 
+.ui.dimmer
+  .ui.loader#page-loader
+
 .ui.pusher
   .ui.main.container
     = render_service_announcements
