--- a/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
@@ -5,12 +5,12 @@
   </div>
   <div class="content">
     <p>Are you sure you want to delete this application?</p>
-    <p>You'll have to reauthorized the application if you use it again.</p>
+    <p>You'll have to reauthorize the application if you use it again.</p>
     <table class="table">
       <tbody>
         <tr>
           <td>Name</td>
-          <td><%= modelName %></td>
+          <td><%= model.name %></td>
         </tr>
       </tbody>
     </table>
@@ -20,7 +20,7 @@
       <i class="remove icon"></i>
       Cancel!
     </div>
-    <a href="<%= url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
+    <a href="<%= modal.url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
       <i class="checkmark icon"></i>
       Revoke Access!
     </a>
