--- a/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke-all.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke-all.jst.ejs
@@ -1,9 +1,9 @@
-<div class="ui basic modal">
+<div class="ui modal">
   <div class="ui icon header">
     <i class="trash icon"></i>
     Revoke Applications Access?
   </div>
-  <div class="content">
+  <div class="scrolling content">
     <p>Are you REALLY sure you want to revoke access to these applications?</p>
     <p>You'll have to reauthorize any application if you use it again.</p>
     <table class="ui celled table">
