--- a/app/assets/javascripts/public/templates/bookmarks/tag-all.jst.ejs
+++ b/app/assets/javascripts/public/templates/bookmarks/tag-all.jst.ejs
@@ -1,21 +1,27 @@
 <div class="ui modal">
   <div class="ui icon header">
-    <i class="trash icon"></i>
-    Delete Applications?
+    <i class="tag icon"></i>
+    Add Tags to Bookmarks
   </div>
   <div class="scrolling content">
-    <p>Are you REALLY sure you want to delete these applications?</p>
-    <p>Any deployed applications using <strong>ANY</strong> of these credentials will be invalidated and unable to interact with transientBug anymore.</p>
+    <p>This will add your new tags to all of these bookmarks.</p>
+    <form class="ui fluid form">
+      <div class="field">
+        <label for="modal-tags-input">Tags</label>
+        <select class="ui multiple search selection dropdown" data-behavior="autocomplete-bookmark-tags" multiple=true>
+        </select>
+      </div>
+    </form>
     <table class="ui celled table">
       <thead>
-        <th>Name</th>
-        <th>Client ID</th>
+        <th>Title</th>
+        <th>URL</th>
       </thead>
       <tbody>
         <% models.forEach((model) => { %>
           <tr>
-            <td><%= model.name %></td>
-            <td><%= model.uid %></td>
+            <td><%= model.title %></td>
+            <td><%= model.uri %></td>
           </tr>
         <% }) %>
       </tbody>
@@ -28,7 +34,7 @@
     </div>
     <div class="ui red ok inverted button">
       <i class="checkmark icon"></i>
-      Yes, I'm sure
+      Add Tags!
     </div>
   </div>
 </div>
