still a little unhappy with the handler but trying to make it generic
the use of the classes is nice because it allows for better custom flows but the way
i did it also introduces some issues with keeping references around. maybe if they were
registered as classes and i had a class factory that set the request method for the generic
modal handler instead? then the instance would be the full flow and could hold references
and ditch them when needed

--- a/app/assets/javascripts/public/templates/bookmarks/tag-all.jst.ejs
+++ b/app/assets/javascripts/public/templates/bookmarks/tag-all.jst.ejs
@@ -1,5 +1,5 @@
 <div class="ui modal">
-  <div class="ui icon header">
+  <div class="ui header">
     <i class="tag icon"></i>
     Add Tags to Bookmarks
   </div>
