--- a/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke-all.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke-all.jst.ejs
@@ -1,5 +1,5 @@
 <div class="ui modal">
-  <div class="ui icon header">
+  <div class="ui header">
     <i class="trash icon"></i>
     Revoke Applications Access?
   </div>
