--- a/app/views/layouts/admin/_navbar.html.haml
+++ b/app/views/layouts/admin/_navbar.html.haml
@@ -1,6 +1,6 @@
 .ui.top.fixed.inverted.red.menu
-  .item
-    %i.sidebar.icon
+  .clickable.item
+    %i.large.sidebar.icon
 
   = link_to admin_root_path, class: "header item" do
     = image_tag "bug_logo.png", class: "logo"
