--- a/app/assets/javascripts/admin/templates/service_announcements/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/service_announcements/delete.jst.ejs
@@ -5,11 +5,11 @@
   </div>
   <div class="content">
     <p>Are you sure you want to delete this Service Announcement?</p>
-    <table class="table">
+    <table class="ui celled table">
       <tbody>
         <tr>
           <td>Title</td>
-          <td><%= title %></td>
+          <td><%= model.title %></td>
         </tr>
       </tbody>
     </table>
@@ -19,7 +19,7 @@
       <i class="remove icon"></i>
       Cancel!
     </div>
-    <a href="<%= url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
+    <a href="<%= modal.url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
       <i class="checkmark icon"></i>
       Yes, I'm sure
     </a>
