clean up some modals

--- a/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
@@ -9,18 +9,18 @@
     <table class="table">
       <tbody>
         <tr>
-          <td>Title</td>
+          <td><b>Title</b></td>
           <td><%= title %></td>
         </tr>
         <tr>
-          <td>Code</td>
+          <td><b>Code</b></td>
           <td><%= code %></td>
         </tr>
       </tbody>
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel inverted button">
       <i class="remove icon"></i>
       Cancel!
     </div>
