--- a/app/assets/javascripts/admin/templates/service_announcements/delete-all.jst.ejs
+++ b/app/assets/javascripts/admin/templates/service_announcements/delete-all.jst.ejs
@@ -19,11 +19,11 @@
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel button">
       <i class="remove icon"></i>
       Cancel!
     </div>
-    <div class="ui red ok inverted button">
+    <div class="ui red ok button">
       <i class="checkmark icon"></i>
       Yes, I'm sure
     </div>
