--- a/app/assets/javascripts/admin/templates/service_announcements/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/service_announcements/delete.jst.ejs
@@ -8,14 +8,14 @@
     <table class="ui celled table">
       <tbody>
         <tr>
-          <td>Title</td>
+          <td><b>Title</b></td>
           <td><%= model.title %></td>
         </tr>
       </tbody>
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel inverted button">
       <i class="remove icon"></i>
       Cancel!
     </div>
