--- a/app/assets/javascripts/public/templates/bookmarks/delete.jst.ejs
+++ b/app/assets/javascripts/public/templates/bookmarks/delete.jst.ejs
@@ -8,18 +8,18 @@
     <table class="table">
       <tbody>
         <tr>
-          <td>Title</td>
+          <td><br>Title</b></td>
           <td><%= model.title %></td>
         </tr>
         <tr>
-          <td>URL</td>
+          <td><b>URL</b></td>
           <td><%= model.uri %></td>
         </tr>
       </tbody>
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel inverted button">
       <i class="remove icon"></i>
       Cancel!
     </div>
