--- a/app/assets/javascripts/public/templates/bookmarks/recache-all.jst.ejs
+++ b/app/assets/javascripts/public/templates/bookmarks/recache-all.jst.ejs
@@ -21,7 +21,7 @@
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel button">
       <i class="remove icon"></i>
       Cancel!
     </div>
