--- a/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
@@ -9,14 +9,14 @@
     <table class="table">
       <tbody>
         <tr>
-          <td>Name</td>
+          <td><b>Name<b></td>
           <td><%= model.name %></td>
         </tr>
       </tbody>
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel inverted button">
       <i class="remove icon"></i>
       Cancel!
     </div>
