--- a/app/assets/javascripts/public/templates/oauth/applications/delete.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/applications/delete.jst.ejs
@@ -4,23 +4,23 @@
     Delete Application?
   </div>
   <div class="content">
-    <p>Are you REALLY sure you want to delete this application?</p>
+    <p>Are you <b>REALLY</b> sure you want to delete this application?</p>
     <p>Any deployed applications using these credentials will be invalidated and unable to interact with transientBug anymore.</p>
     <table class="table">
       <tbody>
         <tr>
-          <td>Name</td>
+          <td><b>Name</b></td>
           <td><%= model.name %></td>
         </tr>
         <tr>
-          <td>Client ID</td>
+          <td><b>Client ID</b></td>
           <td><%= model.uid %></td>
         </tr>
       </tbody>
     </table>
   </div>
   <div class="actions">
-    <div class="ui green basic cancel inverted button">
+    <div class="ui cancel inverted button">
       <i class="remove icon"></i>
       Cancel!
     </div>
