--- a/app/views/admin/bookmarks/_menu.html.haml
+++ b/app/views/admin/bookmarks/_menu.html.haml
@@ -1,17 +1,16 @@
 .ui.fluid.vertical.menu.sticky{ data: { behavior: "sticky", context: "#stickContext", offset: 75 } }
   .item
-    .header
-      Bookmarks
-
-  = active_link_to admin_bookmarks_path, active: :exclusive, class: "item" do
-    Index
-    - if count
-      .ui.label= count
+    .header Bookmarks
 
   .item
     .ui.transparent.icon.input
       = form_tag admin_bookmarks_path, method: :get do
         = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search ...", aria: { label: "search" }
       %i.search.link.icon
+
+  = active_link_to admin_bookmarks_path, active: :exclusive, class: "item" do
+    Index
+    - if defined?(count) && count
+      .ui.label= count
 
   = content_for :menu
