--- a/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
+++ b/app/assets/javascripts/admin/templates/invitations/delete.jst.ejs
@@ -6,15 +6,15 @@
   <div class="content">
     <p>Are you sure you want to delete this invitation?</p>
     <p>Doing so will prevent anyone with the code from registering which is potentially irresponsible.</p>
-    <table class="table">
+    <table class="ui celled table">
       <tbody>
         <tr>
           <td><b>Title</b></td>
-          <td><%= title %></td>
+          <td><%= model.title %></td>
         </tr>
         <tr>
           <td><b>Code</b></td>
-          <td><%= code %></td>
+          <td><%= model.code %></td>
         </tr>
       </tbody>
     </table>
@@ -24,7 +24,7 @@
       <i class="remove icon"></i>
       Cancel!
     </div>
-    <a href="<%= url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
+    <a href="<%= modal.url %>" data-method="delete" rel="nofollow" class="ui red ok inverted button">
       <i class="checkmark icon"></i>
       Yes, I'm sure
     </a>
