--- a/app/views/admin/invitations/_menu.html.haml
+++ b/app/views/admin/invitations/_menu.html.haml
@@ -1,21 +1,20 @@
 .ui.fluid.vertical.menu.sticky{ data: { behavior: "sticky", context: "#stickContext", offset: 75 } }
   .item
-    .header
-      Invitations
-
-  = active_link_to admin_invitations_path, active: :exclusive, class: "item" do
-    Index
-    - if count
-      .ui.label= count
-
-  = active_link_to new_admin_invitation_path, class: "item" do
-    %i.plus.icon
-    New
+    .header Invitations
 
   .item
     .ui.transparent.icon.input
       = form_tag admin_invitations_path, method: :get do
         = search_field_tag "q", params[:q], class: "ui prompt", placeholder: "Search ...", aria: { label: "search" }
       %i.search.link.icon
+
+  = active_link_to admin_invitations_path, active: :exclusive, class: "item" do
+    Index
+    - if defined?(count) && count
+      .ui.label= count
+
+  = active_link_to new_admin_invitation_path, class: "item" do
+    %i.plus.icon
+    New
 
   = content_for :menu
