WIP on service announcement and users admin updates

--- a/app/assets/javascripts/admin/templates/service_announcements/deactivate-all.jst.ejs
+++ b/app/assets/javascripts/admin/templates/service_announcements/deactivate-all.jst.ejs
@@ -1,6 +1,6 @@
 <div class="ui modal">
   <div class="ui header">
-    <i class="trash icon"></i>
+    <i class="hide icon"></i>
     Disable Service Announcements?
   </div>
   <div class="scrolling content">
