--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,4 +1,17 @@
 - content_for :page_title do
   Editing "#{ @user.username }"
 
+- content_for :menu do
+  .item
+    .divider
+    .header User
+    .menu
+      = link_to admin_user_path(@user), class: "item" do
+        %i.expand.icon
+        view
+
+      = link_to admin_user_password_index_path(@user), class: "item" do
+        %i.unlock.alternative.icon
+        change password
+
 = render partial: "form", locals: { user: @user }
