--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -17,7 +17,7 @@
           %i.trash.icon
           delete all
 
-%table.ui.celled.table#stickContext
+%table.ui.celled.table
   %thead
     %tr
       %th= select_all_checkbox
@@ -31,7 +31,7 @@
     - if @users.any?
       - @users.each do |user|
         %tr
-          %td.collapsing= model_tag user, only: [ :id, :username ]
+          %td.collapsing= model_tag user, only: [ :id, :username, :email ]
           %td.collapsing
             .ui.buttons
               = link_to admin_user_path(user), class: "ui icon button" do 
