--- a/app/views/admin/invitations/edit.html.haml
+++ b/app/views/admin/invitations/edit.html.haml
@@ -1,4 +1,13 @@
 - content_for :page_title do
   Editing "#{ @invitation.title }"
 
+- content_for :menu do
+  .item
+    .divider
+    .header Invitation
+    .menu
+      = link_to admin_invitation_path(@invitation), class: "item" do
+        %i.expand.icon
+        view
+
 = render partial: "form", locals: { invitation: @invitation }
