--- a/app/assets/javascripts/public/templates/bookmarks/delete.jst.ejs
+++ b/app/assets/javascripts/public/templates/bookmarks/delete.jst.ejs
@@ -5,10 +5,10 @@
   </div>
   <div class="content">
     <p>Are you sure you want to delete this bookmark?</p>
-    <table class="table">
+    <table class="ui celled table">
       <tbody>
         <tr>
-          <td><br>Title</b></td>
+          <td><b>Title</b></td>
           <td><%= model.title %></td>
         </tr>
         <tr>
