--- a/app/assets/javascripts/public/templates/oauth/applications/delete.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/applications/delete.jst.ejs
@@ -6,7 +6,7 @@
   <div class="content">
     <p>Are you <b>REALLY</b> sure you want to delete this application?</p>
     <p>Any deployed applications using these credentials will be invalidated and unable to interact with transientBug anymore.</p>
-    <table class="table">
+    <table class="ui celled table">
       <tbody>
         <tr>
           <td><b>Name</b></td>
