--- a/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
+++ b/app/assets/javascripts/public/templates/oauth/authorized_applications/revoke.jst.ejs
@@ -6,7 +6,7 @@
   <div class="content">
     <p>Are you sure you want to delete this application?</p>
     <p>You'll have to reauthorize the application if you use it again.</p>
-    <table class="table">
+    <table class="ui celled table">
       <tbody>
         <tr>
           <td><b>Name<b></td>
