better error capturing on offline caches
also display a history of the caches in the admin panel (max displayed is hacked right now)
and the errors from the last cache

--- a/app/views/admin/bookmarks/show.html.haml
+++ b/app/views/admin/bookmarks/show.html.haml
@@ -4,6 +4,10 @@
 = model_tag @bookmark, no_checkbox: true, only: [ :id, :title, :uri ]
 
 .ui.menu
+  = link_to bookmark_cache_index_path(@bookmark), class: "item" do
+    %i.eye.icon
+    view cache
+
   = modal_tag @bookmark, :recache, url: admin_bookmark_cache_index_path(@bookmark) do
     %i.download.icon
     recache
@@ -13,7 +17,6 @@
       more
       %i.dropdown.icon
       .menu
-
         .header
           %i.warning.sign.icon
           DANGERZONE
@@ -56,5 +59,53 @@
       %td
         = @bookmark.created_at.to_s(:long)
 
-%h2.ui.dividing.header Cache History
-%p Coming Soon
+- if @bookmark.offline_caches.any?
+  .ui.equal.width.grid
+    .ui.row
+      .ui.column
+        %h2.ui.dividing.header Last Cache Errors
+
+        - if @bookmark.current_offline_cache.error_messages.empty?
+          %p Hurray! The last cache attempt had no error messages.
+
+        - else
+          .ui.list
+            - @bookmark.current_offline_cache.error_messages.each do |error_message|
+              .item
+                %i.warning.circle.icon
+                  .content
+                    .header= error_message.key
+                    .description= error_message.message
+
+      .ui.column
+        %h2.ui.dividing.header Cache History
+
+        - history_length = params.fetch(:cache_history, 5)
+        %p Last cache attempts shown (max: #{ history_length })
+
+        .ui.feed
+          - @bookmark.offline_caches.order(created_at: :desc).limit(history_length).each do |offline_cache|
+            .event
+              .label
+                %i.download.icon
+
+              .content
+                .summary
+                  Recached at
+                  .date= offline_cache.created_at.to_s(:long)
+
+                .extra.text
+                  .ui.list
+                    - offline_cache.assets.each do |asset|
+                      .item
+                        %i.file.icon
+                        .content
+                          .header= asset.blob.metadata.dig("uri")
+                          .description= asset.blob.content_type
+
+                .meta
+                  -# TODO: Make this have a way to see what the errors were
+                  %i.warning.circle.icon
+                  - error_count = offline_cache.error_messages.count
+                  = error_count
+                  = "Error".pluralize(error_count)
