add a small message about no caches
also fix a bug where the bookmark wasn't getting the offline cache added to its ... offline caches
not really a bug so much as a missing feature, really.

--- a/app/views/admin/bookmarks/show.html.haml
+++ b/app/views/admin/bookmarks/show.html.haml
@@ -109,3 +109,6 @@
                   - error_count = offline_cache.error_messages.count
                   = error_count
                   = "Error".pluralize(error_count)
+- else
+  %h2.ui.dividing.header Cache History
+  %p None :(
