made a view helper for error count label
collapsed the assets with an accordian tag and added last cache status to index list

--- a/app/views/admin/bookmarks/index.html.haml
+++ b/app/views/admin/bookmarks/index.html.haml
@@ -25,6 +25,7 @@
       %th Creator
       %th URL
       %th Tags
+      %th Cache
       %th Created At
   %tbody
     - if @bookmarks.any?
@@ -57,6 +58,15 @@
           %td.collapsing= link_to bookmark.user.username, admin_user_path(bookmark.user)
           %td= bookmark.uri.to_s
           %td.collapsing= bookmark.tags.map(&:label).join ", "
+
+          %td.collapsing
+            - if bookmark.offline_caches.last
+              = error_count_label bookmark.offline_caches.last.error_messages
+            - else
+              .ui.label
+                %i.meh.icon
+                Uncached
+
           %td.collapsing= bookmark.created_at.to_s(:long)
 
     - else
