--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -1,23 +1,38 @@
 - content_for :page_title do
-  Fequently Asked Questions and Other Things
+  Frequently Asked Questions and Other Things
 
 %h1.dividing.header FAQ
 
 %h2.dividing.header General
 %p
+  %b.question Who are you?
+  .answer
+    I'm just a peep in search of that perfect bookmark.
+
+%p
   %b.question Can I make suggestions for new features?
   .answer
-    Yup, send an email to suggestions (at) transientbug.ninja and I'll look into it.
+    Yup, you can either make an #{ link_to "issue", "https://github.com/transientBug/transientbug-rails/issues" } with the "suggestion" tag, or send an email to suggestions (at) transientbug.ninja and I'll look into it.
 
 %p
   %b.question How can I report a bug?
   .answer
-    You should send an email to issues (at) transientbug.ninja with any information you can. The more information I've got, the easier it is to track down the bug; Bonus points: I'll let you know when the bug is fixed, or which github issue or trello card you can use to track the progress.
+    %p
+      If it is a bug with the website, you should use #{ link_to "these Github issues", "https://github.com/transientBug/transientbug-rails/issues" }.
+
+    %p
+      If the bug is a part of the Firefox extension, you should use #{ link_to "these Github issues", "https://github.com/transientBug/firefox-extension/issues" } instead.
+
+    %p
+      For any issue first please make sure that you aren't making a duplicate of an existing report. Also, please include as much information as you can and be detailed in the actions leading to the bug. The more information I've got, the easier it is to track down the bug; Bonus points: I'll let you know when the bug is fixed, or which github pull request or trello card you can use to track the progress.
+
+    %p
+      Alternatively, you can send an email to issues (at) transientbug.ninja and I can put it into a Github issue.
 
 %p
   %b.question Is there a place I can track what is in progress?
   .answer
-    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }
+    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }. You can also check out the Github #{ link_to "pull requests", "https://github.com/transientBug/transientbug-rails/pulls" }.
 
 %h2.dividing.header Bookmarks
 %p
@@ -26,6 +41,6 @@
     The offline caching system is pretty rudimentary at the moment. It downloads the original webpage, and attempts to grab all the directly referenced script, css and image tags within that webpage. In the off chance that your bookmarked webpage is to a site that actively tries to prevent crawlers, or a site that is rendered with flash or even JS (looking at you, react rendered blog), transientBug is unable to cache those sites at this time.
 
 %p
-  %b.question Why am I getting a 500 error for some caches?
+  %b.question Why am I getting an error for some caches?
   .answer
-    Chances are the page redirects or isn't a valid URL. I'm working on making transientBug smarter about handling these, but for now it just throws a 500 on the cached view.
+    Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error.
